# learning-python

./: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: linting.yaml  testing.yaml
docs/: index.md  reference.md
docs/css/: base.css  bootstrap.min.css
docs/js/: responsive-table.js
src/: aware_dict.py  property.py
tests/: test_aware_dict.py  test_property.py
utils/: gen_ref_pages.py
